--- a/test/extra_whitespace.yml
+++ b/test/extra_whitespace.yml
@@ -4,7 +4,7 @@ in: |-
   h1. Header
 
   text
-out: |-
+html: |-
   <h1>Header</h1>
   <p>text</p>
 ---
@@ -14,7 +14,7 @@ in: |-
   
   
   text
-out: |-
+html: |-
   <h1>Header</h1>
   <p>text</p>
 ---
@@ -23,7 +23,7 @@ in: |-
   text
 
   h1. Header
-out: |-
+html: |-
   <p>text</p>
   <h1>Header</h1>
 ---
@@ -33,7 +33,7 @@ in: |-
   
   
   h1. Header
-out: |-
+html: |-
   <p>text</p>
   <h1>Header</h1>
 ---
@@ -41,24 +41,24 @@ name: header with 1 blank line above and with no text
 in: |-
 
   h1. Header
-out: <h1>Header</h1>
+html: <h1>Header</h1>
 ---
 name: header with 2 blank lines above and with no text
 in: |-
 
 
   h1. Header
-out: <h1>Header</h1>
+html: <h1>Header</h1>
 ---
 name: header with 1 blank line below and with no text
 in: |+
   h1. Header
 
-out: <h1>Header</h1>
+html: <h1>Header</h1>
 ---
 name: header with 2 blank lines below and with no text
 in: |+
   h1. Header
 
 
-out: <h1>Header</h1>
+html: <h1>Header</h1>
