--- a/test/hobix.yml
+++ b/test/hobix.yml
@@ -5,7 +5,7 @@ in: |-
   A single paragraph.
   
   Followed by another.
-out: |-
+html: |-
   <p>A single paragraph.</p>
   <p>Followed by another.</p>
 --- 
@@ -17,7 +17,7 @@ in: |-
   <pre>
     I am <b>very</b> serious.
   </pre>
-out: |-
+html: |-
   <p>I am <b>very</b> serious.</p>
   <pre>
     I am &lt;b&gt;very&lt;/b&gt; serious.
@@ -28,62 +28,62 @@ desc: Line breaks are converted to HTML breaks.
 in: |-
   I spoke.
   And none replied.
-out: |-
+html: |-
   <p>I spoke.<br />
   And none replied.</p>
 --- 
 name: curly quotes
 desc: Single- and double-quotes around words or phrases are converted to curly quotations, much easier on the eye.
 in: "\"Observe!\""
-out: <p>&#8220;Observe!&#8221;</p>
+html: <p>&#8220;Observe!&#8221;</p>
 --- 
 name: double hyphens
 desc: Double hyphens are replaced with an em-dash.
 in: Observe--very nice!
-out: <p>Observe&#8212;very nice!</p>
+html: <p>Observe&#8212;very nice!</p>
 --- 
 name: double hyphens with spaces
 desc: Double hyphens are replaced with an em-dash and surrounding spaces are preserved.
 in: Observe -- very nice!
-out: <p>Observe &#8212; very nice!</p>
+html: <p>Observe &#8212; very nice!</p>
 --- 
 name: single hyphens with spaces
 desc: Single hyphens are replaced with en-dashes if they are surrounded by spaces.
 in: Observe - tiny and brief.
-out: <p>Observe &#8211; tiny and brief.</p>
+html: <p>Observe &#8211; tiny and brief.</p>
 --- 
 name: midword hyphens 
 desc: Single hyphens are left alone if not surrounded by spaces.
 in: Observe the nicely-done hyphen.
-out: <p>Observe the nicely-done hyphen.</p>
+html: <p>Observe the nicely-done hyphen.</p>
 --- 
 name: ellipses
 desc: Triplets of periods become an ellipsis.
 in: Observe...
-out: <p>Observe&#8230;</p>
+html: <p>Observe&#8230;</p>
 --- 
 name: dimension sign
 desc: The letter 'x' becomes a dimension sign when used between digits.
 in: "Observe: 2x3."
-out: "<p>Observe: 2&#215;3.</p>"
+html: "<p>Observe: 2&#215;3.</p>"
 --- 
 name: dimension sign with spaces
 in: "Observe: 2 x 4."
-out: "<p>Observe: 2 &#215; 4.</p>"
+html: "<p>Observe: 2 &#215; 4.</p>"
 --- 
 name: dimension signs chained
 in: "Observe: 2x3x4."
-out: "<p>Observe: 2&#215;3&#215;4.</p>"
+html: "<p>Observe: 2&#215;3&#215;4.</p>"
 --- 
 name: trademark and copyright
 desc: Conversion of trademark and copyright symbols.
 in: one(TM), two(R), three(C).
-out: <p>one&#8482;, two&#174;, three&#169;.</p>
+html: <p>one&#8482;, two&#174;, three&#169;.</p>
 --- 
 name: headers
 desc: To make an entire paragraph into a Header, place “h<em>n</em>.” at its beginning, where <em>n</em> is a number from 1-6.
 in: h3. Header 3
-out: <h3>Header 3</h3>
+html: <h3>Header 3</h3>
 --- 
 name: blockquote
 desc: To make an entire paragraph into a block quotation, place “bq.” before it.
@@ -93,7 +93,7 @@ in: |-
   bq. A block quotation.
   
   Any old text
-out: |-
+html: |-
   <p>Any old text</p>
   <blockquote>
   <p>A block quotation.</p>
@@ -103,100 +103,100 @@ out: |-
 name: footnote reference
 desc: Numeric references within text to footnotes appear between square brackets.
 in: This is covered elsewhere[1].
-out: <p>This is covered elsewhere<sup class="footnote"><a href="#fn1">1</a></sup>.</p>
+html: <p>This is covered elsewhere<sup class="footnote"><a href="#fn1">1</a></sup>.</p>
 --- 
 name: footnote
 desc: To create the footnote that corresponds to its reference within the text, begin a new paragraph with fn and the footnote&#8217;s number, followed by a dot and a space.
 in: fn1. Down here, in fact.
-out: <p class="footnote" id="fn1"><sup>1</sup> Down here, in fact.</p>
+html: <p class="footnote" id="fn1"><sup>1</sup> Down here, in fact.</p>
 --- 
 name: em
 desc: Emphasis to text is added by surrounding a phrase with underscores.  In HTML, this often appears as <em>italics</em>.
 in: I _believe_ every word.
-out: <p>I <em>believe</em> every word.</p>
+html: <p>I <em>believe</em> every word.</p>
 --- 
 name: strong
 desc: Strength can be give to text by surrounding with asterisks.  In HTML, this strength appears as <strong>bold</strong>.
 in: And then? She *fell*!
-out: <p>And then? She <strong>fell</strong>!</p>
+html: <p>And then? She <strong>fell</strong>!</p>
 --- 
 name: force bold italics
 desc: Both italics and bold can be forced by doubling the underscores or asterisks.
 in: |-
   I __know__.
   I **really** __know__.
-out: |-
+html: |-
   <p>I <i>know</i>.<br />
   I <b>really</b> <i>know</i>.</p>
 --- 
 name: citation
 desc: Use double question marks to indicate <em>citation</em>.  The title of a book, for instance.
 in: ??Cat's Cradle?? by Vonnegut
-out: <p><cite>Cat&#8217;s Cradle</cite> by Vonnegut</p>
+html: <p><cite>Cat&#8217;s Cradle</cite> by Vonnegut</p>
 --- 
 name: code phrases
 desc: Code phrases can be surrounded by at-symbols.
 in: Convert with @r.to_html@
-out: <p>Convert with <code>r.to_html</code></p>
+html: <p>Convert with <code>r.to_html</code></p>
 --- 
 name: del
 desc: To indicate a passage which has been deleted, surround the passage with hypens.
 in: I'm -sure- not sure.
-out: <p>I&#8217;m <del>sure</del> not sure.</p>
+html: <p>I&#8217;m <del>sure</del> not sure.</p>
 --- 
 name: ins
 desc: Pluses around a passage indicate its insertion.
 in: You are a +pleasant+ child.
-out: <p>You are a <ins>pleasant</ins> child.</p>
+html: <p>You are a <ins>pleasant</ins> child.</p>
 --- 
 name: superscript
 desc: To superscript a phrase, surround with carets.
 in: a ^2^ + b ^2^ = c ^2^
-out: <p>a <sup>2</sup> + b <sup>2</sup> = c <sup>2</sup></p>
+html: <p>a <sup>2</sup> + b <sup>2</sup> = c <sup>2</sup></p>
 --- 
 name: subscript
 desc: To subscript, surround with tildes.
 in: log ~2~ x
-out: <p>log <sub>2</sub> x</p>
+html: <p>log <sub>2</sub> x</p>
 --- 
 name: span
 desc: Lastly, if you find yourself needing to customize the style of a passage, use percent symbols to translate the passage as an HTML span.
 in: I'm %unaware% of most soft drinks.
-out: <p>I&#8217;m <span>unaware</span> of most soft drinks.</p>
+html: <p>I&#8217;m <span>unaware</span> of most soft drinks.</p>
 --- 
 name: style span
 desc: This way, you can apply style settings, as described in the next section to arbitrary phrases.
 in: |-
   I'm %{color:red}unaware%
   of most soft drinks.
-out: |-
+html: |-
   <p>I&#8217;m <span style="color:red;">unaware</span><br />
   of most soft drinks.</p>
 --- 
 name: css class
 desc: A block can be tagged with a CSS class by circling the class in parentheses and placing it just before the period which marks the block.
 in: p(example1). An example
-out: <p class="example1">An example</p>
+html: <p class="example1">An example</p>
 --- 
 name: css id
 desc: An element ID can be given by prefixing the ID with a pound symbol and using it in place of the class.
 in: p(#big-red). Red here
-out: <p id="big-red">Red here</p>
+html: <p id="big-red">Red here</p>
 --- 
 name: class and id combined
 desc: Class and ID can be combined by placing the class first.
 in: p(example1#big-red2). Red here
-out: <p class="example1" id="big-red2">Red here</p>
+html: <p class="example1" id="big-red2">Red here</p>
 --- 
 name: css style
 desc: Style settings can be provided directly by surrounding them in curly braces.
 in: p{color:blue;margin:30px}. Spacey blue
-out: <p style="color:blue;margin:30px;">Spacey blue</p>
+html: <p style="color:blue;margin:30px;">Spacey blue</p>
 --- 
 name: language designations
 desc: Language designations can be given between angel brackets.
 in: p[fr]. rouge
-out: <p lang="fr">rouge</p>
+html: <p lang="fr">rouge</p>
 --- 
 name: block attributes on phrase modifiers
 desc: All block attributes can be applied to phrases as well by placing them just inside the opening modifier.
@@ -205,7 +205,7 @@ in: |-
   when I _(big)sprouted_ that
   corn stalk from my
   %[es]cabeza%.
-out: |-
+html: |-
   <p>I seriously <strong style="color:red;">blushed</strong><br />
   when I <em class="big">sprouted</em> that<br />
   corn stalk from my<br />
@@ -214,22 +214,22 @@ out: |-
 name: align justified
 desc: Text inside blocks can be aligned in four basic ways.
 in: p<>. justified
-out: <p style="text-align:justify;">justified</p>
+html: <p style="text-align:justify;">justified</p>
 --- 
 name: indentation
 desc: Indentation can also be specified by provide a single left paren for every 1em to the left.  A single right paren for every 1em to the right.
 in: p))). right ident 3em
-out: <p style="padding-right:3em;">right ident 3em</p>
+html: <p style="padding-right:3em;">right ident 3em</p>
 --- 
 name: indentation and alignment
 desc: Identation may be coupled with alignment.
 in: h2()>. Bingo.
-out: <h2 style="padding-left:1em;padding-right:1em;text-align:right;">Bingo.</h2>
+html: <h2 style="padding-left:1em;padding-right:1em;text-align:right;">Bingo.</h2>
 --- 
 name: many modifiers combined
 desc: And, furthermore, coupled with language settings and CSS styles.
 in: h3()>[no]{color:red}. Bingo
-out: <h3 style="padding-left:1em;padding-right:1em;text-align:right;color:red;" lang="no">Bingo</h3>
+html: <h3 style="padding-left:1em;padding-right:1em;text-align:right;color:red;" lang="no">Bingo</h3>
 --- 
 name: code blocks
 desc: For example, long code blocks belong between <code>pre</code> and <code>code</code> tags.  Please also indent your code inside the tags to be sure that all Textile processors out there will ignore the contents.
@@ -239,7 +239,7 @@ in: |
     a.gsub!( /</, '' )
   </code>
   </pre>
-out: |-
+html: |-
   <pre>
   <code>
     a.gsub!( /&lt;/, '' )
@@ -259,7 +259,7 @@ in: |
   </div>
   
   The main text of the page goes here and will stay to the left of the sidebar.
-out: |-
+html: |-
   <div style="float:right;">
 
   <h3>Sidebar</h3>
@@ -275,7 +275,7 @@ in: |-
   # A first item
   # A second item
   # A third
-out: |-
+html: |-
   <ol>
   	<li>A first item</li>
   	<li>A second item</li>
@@ -292,7 +292,7 @@ in: |-
   # Humans need only:
   ## Water
   ## Protein
-out: |-
+html: |-
   <ol>
   	<li>Fuel could be:
   	<ol>
@@ -313,7 +313,7 @@ in: |-
   * A first item
   * A second item
   * A third
-out: |-
+html: |-
   <ul>
   	<li>A first item</li>
   	<li>A second item</li>
@@ -330,7 +330,7 @@ in: |-
   * Humans need only:
   ** Water
   ** Protein
-out: |-
+html: |-
   <ul>
   	<li>Fuel could be:
   	<ul>
@@ -348,7 +348,7 @@ out: |-
 name: links
 desc: Basic links are comprised of a phrase which is linked to a <acronym title="Universal Resource Locator">URL</acronym>.  Place the descriptive phrase in quotation marks.  Follow it immediately by a colon and the URL.
 in: I searched "Google":http://google.com.
-out: <p>I searched <a href="http://google.com">Google</a>.</p>
+html: <p>I searched <a href="http://google.com">Google</a>.</p>
 --- 
 name: link aliases
 desc: If you are using the same link several times in your document, or you’d just like to be a tad more organized, you can use a link alias.  Place the URL anywhere in your document, beginning with its alias in square brackets.  Then, use the alias in place of the URL, using the link format above.
@@ -358,7 +358,7 @@ in: |-
   "link to":hobix!
   
   [hobix]http://hobix.com
-out: |-
+html: |-
   <p>I am crazy about <a href="http://hobix.com">Hobix</a><br />
   and <a href="http://hobix.com">it&#8217;s</a> <a href="http://hobix.com">all</a> I ever<br />
   <a href="http://hobix.com">link to</a>!</p>
@@ -366,17 +366,17 @@ out: |-
 name: image
 desc: You can embed an image in your Textile document by surrounding its URL with exclamation marks.
 in: "!http://hobix.com/sample.jpg!"
-out: <p><img src="http://hobix.com/sample.jpg" alt="" /></p>
+html: <p><img src="http://hobix.com/sample.jpg" alt="" /></p>
 --- 
 name: image title
 desc: A title for the image can also be provided in parens, just before the closing exclamation.
 in: "!openwindow1.gif(Bunny.)!"
-out: <p><img src="openwindow1.gif" title="Bunny." alt="Bunny." /></p>
+html: <p><img src="openwindow1.gif" title="Bunny." alt="Bunny." /></p>
 --- 
 name: image links
 desc: Links can be attached to images with a colon.
 in: "!openwindow1.gif!:http://hobix.com/"
-out: <p><a href="http://hobix.com/"><img src="openwindow1.gif" alt="" /></a></p>
+html: <p><a href="http://hobix.com/"><img src="openwindow1.gif" alt="" /></a></p>
 --- 
 name: image alignments
 desc: Alignments can be applied as well to images.
@@ -385,7 +385,7 @@ in: |-
   
   And others sat all round the small
   machine and paid it to sing to them.
-out: |-
+html: |-
   <p style="float:right;"><img src="obake.gif" alt="" /></p>
   <p>And others sat all round the small<br />
   machine and paid it to sing to them.</p>
@@ -393,7 +393,7 @@ out: |-
 name: acronym definitions
 desc: Definitions for acronyms can be provided by following an acronym with its definition in parens.
 in: We use CSS(Cascading Style Sheets).
-out: <p>We use <acronym title="Cascading Style Sheets"><span class="caps">CSS</span></acronym>.</p>
+html: <p>We use <acronym title="Cascading Style Sheets"><span class="caps">CSS</span></acronym>.</p>
 --- 
 name: tables
 desc: Simple tables can be built by separating fields with pipe characters
@@ -402,7 +402,7 @@ in: |-
   | joan | 24 | f |
   | archie | 29 | m |
   | bella | 45 | f |
-out: |-
+html: |-
   <table>
   	<tr>
   		<td> name </td>
@@ -433,7 +433,7 @@ in: |-
   | joan | 24 | f |
   | archie | 29 | m |
   | bella | 45 | f |
-out: |-
+html: |-
   <table>
   	<tr>
   		<th>name </th>
@@ -467,7 +467,7 @@ in: |-
   |<>. justify |
   |^. valign top |
   |~. bottom |
-out: |-
+html: |-
   <table>
   	<tr>
   		<th>attribute list </th>
@@ -497,7 +497,7 @@ desc: You can also specify colspans with a backslash, followed by the cell width
 in: |-
   |\2. spans two cols |
   | col 1 | col 2 |
-out: |-
+html: |-
   <table>
   	<tr>
   		<td colspan="2">spans two cols </td>
@@ -514,7 +514,7 @@ in: |-
   |/3. spans 3 rows | a |
   | b |
   | c |
-out: |-
+html: |-
   <table>
   	<tr>
   		<td rowspan="3">spans 3 rows </td>
@@ -531,7 +531,7 @@ out: |-
 name: block attributes applied to table cells
 desc: All block attributes can be applied to table cells as well.
 in: "|{background:#ddd}. Grey cell|"
-out: |-
+html: |-
   <table>
   	<tr>
   		<td style="background:#ddd;">Grey cell</td>
@@ -544,7 +544,7 @@ in: |-
   table{border:1px solid black}.
   |This|is|a|row|
   |This|is|a|row|
-out: |-
+html: |-
   <table style="border:1px solid black;">
   	<tr>
   		<td>This</td>
@@ -565,7 +565,7 @@ desc: Attributes can be applied to a single row by supplying the attribute befor
 in: |-
   |This|is|a|row|
   {background:#ddd}. |This|is|grey|row|
-out: |-
+html: |-
   <table>
   	<tr>
   		<td>This</td>
