--- a/test/instiki.yml
+++ b/test/instiki.yml
@@ -1,20 +1,20 @@
 --- # Bugs filed at http://www.instiki.org/show/BugReports
 in: |-
   _Hi, <span class="newWikiWord">Joe Bob<a href="../show/JoeBob">?</a></span>, this should all be in italic!_
-out: |-
+html: |-
   <p><em>Hi, <span class="newWikiWord">Joe Bob<a href="../show/JoeBob">?</a></span>, this should all be in italic!</em></p>
 ---
 in: '*this <span>span</span> is strong*'
-out: '<p><strong>this <span>span</span> is strong</strong></p>'
+html: '<p><strong>this <span>span</span> is strong</strong></p>'
 ---
 in: '*this <span>Camel Thing<a href="../show/CamelThing">?</a></span> is strong*'
-out: '<p><strong>this <span>Camel Thing<a href="../show/CamelThing">?</a></span> is strong</strong></p>'
+html: '<p><strong>this <span>Camel Thing<a href="../show/CamelThing">?</a></span> is strong</strong></p>'
 ---
 in: '_this <span>span</span> is italic_'
-out: '<p><em>this <span>span</span> is italic</em></p>'
+html: '<p><em>this <span>span</span> is italic</em></p>'
 ---
 in: '%{color:red}nested span because of <span><span class="newWikiWord">Camel Word<a href="../show/CamelWord">?</a></span></span>%'
-out: '<p><span style="color:red;">nested span because of <span><span class="newWikiWord">Camel Word<a href="../show/CamelWord">?</a></span></span></span></p>'
+html: '<p><span style="color:red;">nested span because of <span><span class="newWikiWord">Camel Word<a href="../show/CamelWord">?</a></span></span></span></p>'
 ---
 in: |-
   h2. Version History
@@ -24,7 +24,7 @@ in: |-
   * "Version
   0.1":http://www.threewordslong.com/chunk-0-1.patch.gz - First cut of new system. Much cleaner.
   * "Version 0.2":http://www.threewordslong.com/chunk-0-2.patch.gz - Fixed problem with "authors" page and some tests.
-out: |-
+html: |-
   <h2>Version History</h2>
   <ul>
   	<li><a href="http://www.threewordslong.com/render-0-8-9b.patch">Version<br />
@@ -35,4 +35,4 @@ out: |-
   </ul>
 ---
 in: "--richSeymour --whyTheLuckyStiff"
-out: "<p>&#8212;richSeymour &#8212;whyTheLuckyStiff</p>"
+html: "<p>&#8212;richSeymour &#8212;whyTheLuckyStiff</p>"
