--- a/test/code.yml
+++ b/test/code.yml
@@ -13,6 +13,10 @@ in: |-
 html: |-
   <p>Regex-based string substitution with Ruby&#8217;s gsub!: <code>"123&lt;789".gsub!(/&lt;/, "") =&gt; "123789"</code></p>
 ---
+name: inlne code escapement describing textile paragraph styling 
+in: 'This paragraph is aligned left but if you add this: @p>.@ to the beginning it will be aligned right.'
+html: '<p>This paragraph is aligned left but if you add this: <code>p&gt;.</code> to the beginning it will be aligned right.</p>'
+---
 name: escaping in blockcode
 in: 'bc. This is within a block of code, so < and > should be entities.  You can talk about a <p class="foo"> tag if you wish and it will be properly escaped.'
 html: '<pre><code>This is within a block of code, so &lt; and &gt; should be entities.  You can talk about a &lt;p class="foo"&gt; tag if you wish and it will be properly escaped.</code></pre>'
