--- a/test/images.yml
+++ b/test/images.yml
@@ -172,3 +172,31 @@ html: <p>(This is an <a href="http://example.com/index.html?foo=bar&amp;a=b#a1">
 ---
 in:  (This is an !http://example.com/i/image.jpg!:http://example.com/index.html?foo=bar&a=b#a10)  This is not.
 html: <p>(This is an <a href="http://example.com/index.html?foo=bar&amp;a=b#a10"><img src="http://example.com/i/image.jpg" alt="" /></a>)  This is not.</p>
+---
+name: image with relative src with dot
+in: "!../../image.jpg!"
+html: <p><img src="../../image.jpg" alt="" /></p>
+---
+name: image with class
+in: "!(myclass)image.jpg!"
+html: <p><img src="image.jpg" class="myclass" alt="" /></p>
+---
+name: image with class and dotspace
+in: "!(myclass). image.jpg!"
+html: <p><img src="image.jpg" class="myclass" alt="" /></p>
+---
+name: image with class and relative src with dots
+in: "!(myclass)../../image.jpg!"
+html: <p><img src="../../image.jpg" class="myclass" alt="" /></p>
+---
+name: image with class and dotspace and relative src with dots
+in: "!(myclass). ../../image.jpg!"
+html: <p><img src="../../image.jpg" class="myclass" alt="" /></p>
+---
+name: image with style
+in: "!{color:red}image.jpg!"
+html: <p><img src="image.jpg" style="color:red;" alt="" /></p>
+---
+name: image with style and dotspace
+in: "!{color:red}. image.jpg!"
+html: <p><img src="image.jpg" style="color:red;" alt="" /></p>
