Don't insert HTML line breaks when hard_breaks == false.
This allows those that really don't want hard breaks to turn it off.  This accessor is deprecated and will be removed in a future version.

--- a/test/basic.yml
+++ b/test/basic.yml
@@ -97,6 +97,9 @@ in: |-
 html: |-
   <p>I spoke.<br />
   And none replied.</p>
+html_no_breaks: |-
+  <p>I spoke.
+  And none replied.</p>
 --- 
 name: curly quotes
 desc: Single- and double-quotes around words or phrases are converted to curly quotations, much easier on the eye.
