Implemented the :no_span_caps restriction.
Implemented the last of the RedCloth 3.x restrictions: no_span_caps.

--- a/test/basic.yml
+++ b/test/basic.yml
@@ -480,6 +480,7 @@ desc: Definitions for acronyms can be provided by following an acronym with its 
 in: We use CSS(Cascading Style Sheets).
 html: <p>We use <acronym title="Cascading Style Sheets"><span class="caps">CSS</span></acronym>.</p>
 lite_mode_html: We use <acronym title="Cascading Style Sheets"><span class="caps">CSS</span></acronym>.
+no_span_caps_html: <p>We use <acronym title="Cascading Style Sheets">CSS</acronym>.</p>
 --- 
 name: tables
 desc: Simple tables can be built by separating fields with pipe characters
