--- a/test/threshold.yml
+++ b/test/threshold.yml
@@ -92,11 +92,13 @@ name: acronyms
 desc: Acronyms consist of three or more uppercase characters, followed immediately by words in parentheses.
 in: ABC(Always Be Closing)
 html: <p><acronym title="Always Be Closing"><span class="caps">ABC</span></acronym></p>
+no_span_caps_html: <p><acronym title="Always Be Closing">ABC</acronym></p>
 ---
 name: uppercase
 desc: Uppercase words of three or more characters are enclosed with a special span element.
 in: IBM or HAL
 html: <p><span class="caps">IBM</span> or <span class="caps">HAL</span></p>
+no_span_caps_html: <p>IBM or HAL</p>
 ---
 name: emphasis
 desc: Emphasis is added with _ underscores.
